Fixed arrows appearing in mobile view, fixed "Real Money" for desktop in Safari, got rid of spacing above accordion in mobile view, converted to HTML

--- a/converted-html/public/styles/top5-widget.css
+++ b/converted-html/public/styles/top5-widget.css
@@ -130,8 +130,15 @@ h1 {
 ul > li {
   list-style-type: disc; }
 
-#top5-list > li {
-  list-style-type: none; }
+#top5-list > li.top5 {
+  list-style-type: none;
+  position: relative; }
+  #top5-list > li.top5 > section.pContainer > h2,
+  #top5-list > li.top5 > section.pContainer p {
+    margin-top: 0;
+    margin-bottom: 29px; }
+  #top5-list > li.top5 > section.pContainer p:last-child {
+    margin-bottom: 0; }
 
 p, li {
   line-height: 130%; }
@@ -149,7 +156,8 @@ li.top5 > a {
     position: absolute;
     width: 100%;
     text-align: center;
-    bottom: -18px;
+    /*bottom: -18px;*/
+    /*top: 81px;*/
     font-size: 44px;
     left: 0; }
     li.top5 > a .icon-arrow-down:before {
@@ -199,18 +207,20 @@ li.top5-targets > a {
 li.top5-targets > a .top5-icon, li.top5-targets > a .icon-arrow-down {
   color: #b734ee; }
 
-li.top5-where > a {
+#top5-list > li.top5-where > a {
   background: #e05f00; }
-  li.top5-where > a:hover {
+  #top5-list > li.top5-where > a:hover {
     background: #c65000; }
-    li.top5-where > a:hover .top5-icon,
-    li.top5-where > a:hover .icon-arrow-down {
+    #top5-list > li.top5-where > a:hover .top5-icon,
+    #top5-list > li.top5-where > a:hover .icon-arrow-down {
       color: #c65000; }
-li.top5-where > a .top5-icon, li.top5-where > a .icon-arrow-down {
+#top5-list > li.top5-where > a .top5-icon, #top5-list > li.top5-where > a .icon-arrow-down {
   color: #e05f00; }
-li.top5-where ul {
+#top5-list > li.top5-where > section.pContainer > h2 {
+  margin-bottom: 20px; }
+#top5-list > li.top5-where ul {
   padding: 0; }
-  li.top5-where ul li {
+  #top5-list > li.top5-where ul li {
     margin-left: 18px; }
 
 li.top5 > a > .icon-container {
@@ -230,12 +240,12 @@ ol {
     list-style-type: disc; }
   ol > li {
     /*list-style-type: decimal;*/
-    /*margin-bottom: 29px;*/
+    margin-bottom: 29px;
     line-height: 130%; }
 
 .top5-why ol > li,
 .top5-why h2 {
-  /*margin-bottom: 29px;*/ }
+  margin-bottom: 29px; }
 
 .top5-where ol > li,
 .top5-where h2 {
@@ -260,12 +270,22 @@ span.word {
 
   #top5-list {
     margin: 0; }
+    #top5-list > li.top5 > section.pContainer > h2,
+    #top5-list > li.top5 > section.pContainer p {
+      margin-bottom: 17px; }
+
+  li.top5 > a .icon-arrow-down {
+    top: 81px; }
 
   .intro-text p {
-    padding-left: 22px; }
+    padding-left: 22px;
+    padding-right: 22px; }
 
   .icon-arrow-down {
-    /*display: none;*/ }
+    display: none; }
+
+  #top5-list > li.top5 > a.active > span.icon-arrow-down {
+    display: block; }
 
   .icon-container {
     text-align: center; }
@@ -284,7 +304,7 @@ span.word {
     font-size: 14px; }
 
   .pContainer {
-    padding: 20px;
+    padding: 27px 20px 19px;
     background: #fff; }
     .pContainer * {
       font-size: 14px; }
@@ -301,6 +321,9 @@ span.word {
   .top5-why ol > li,
   .top5-why h2 {
     margin-bottom: 14px; }
+
+  #top5-list > li.top5-real-money > a {
+    padding-right: 0; }
 
   .top5-where > section > ul li {
     margin-bottom: 2px; }
@@ -344,6 +367,12 @@ span.word {
   .top5-why h2 {
     margin-bottom: 29px; }
 
+  li.top5 > a .icon-arrow-down {
+    bottom: -18px; }
+
+  #top5-list > .top5-real-money > a {
+    padding: 16px 0; }
+
   .top5-where > .pContainer {
     /*font-size: 16px;*/ }
     .top5-where > .pContainer > ul {
@@ -372,7 +401,7 @@ span.word {
     text-align: center; }
 
   .pContainer {
-    padding: 33px 43px;
+    padding: 33px 38px;
     background: #F3F3F3;
     border-radius: 12px;
     height: 508px; }
@@ -392,7 +421,7 @@ span.word {
     position: relative;
     z-index: 5; } }
 #top5-list {
-  margin: 24px auto;
+  margin: 24px auto 0;
   width: 100%;
   position: relative;
   top: 100px; }
@@ -415,21 +444,6 @@ ul#top5-list {
   /*position: absolute;*/
   top: -120px; }
 
-/*li.top5-why a {
-    left: 0;
-}
-li.top5-when a {
-    left: 132px;
-}
-li.top5-real-money a {
-    left: 263px;
-}
-li.top5-targets a {
-    left: 394px;
-}
-li.top5-where a {
-    left: 525px;
-}*/
 #top5-list section {
   display: none;
   /* I NEED TO FIX THIS */
@@ -444,8 +458,27 @@ li.top5-where a {
   padding: 10px 25px; }
 
 @media screen and (max-width: 744px) {
+  /* This is added to remove the spacing that desktop layout needs up top */
+  #top5-list {
+    top: 0; }
+
+  /* for mobile, the accordion needs these anchors to be relative, removing the negative top margin is also needed */
   #top5-list li a {
-    padding: 16px 24px; } }
+    padding: 16px 24px;
+    position: relative;
+    top: auto; }
+
+  /* in mobile, hide the arrow by default */
+  #top5-list li a .icon-arrow-down {
+    display: none; }
+
+  /* if the block is active, show the arrow */
+  #top5-list li a.active .icon-arrow-down {
+    display: block; }
+
+  /* add some spacing because the above changes pushed the content kinda close to the arrow */
+  #top5-list section {
+    /*margin-top:20px;*/ } }
 @media screen and (min-width: 745px) {
   .kroger-top5-widget {
     border: 1px solid #ccc; }
